@@ -1,3 +1,8 @@
+Wed May 28 01:02:54 2014  Tanaka Akira  <akr@fsij.org>
+
+	* lib/tempfile.rb (Tempfile#inspect): Show "(closed)" if the tempfile
+	  is closed.
+
 Wed May 28 00:38:09 2014  Tanaka Akira  <akr@fsij.org>
 
 	* test/lib/minitest/unit.rb: Use Tempfile#close! instead of
